MProj/force-app/main/default/objects/Weather__c/fields/Max_Temp__c.field-meta.xml
<CustomField>
    <fullName>Max_Temp__c</fullName>
    <label>Max Temp</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>