MProj/force-app/main/default/objects/Weather__c/fields/Min_Temp__c.field-meta.xml
<CustomField>
    <fullName>Min_Temp__c</fullName>
    <label>Min Temp</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>