MProj/force-app/main/default/objects/Weather__c/fields/Temp_Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Temp_Feels_Like__c</fullName>
    <label>Temp Feels Like</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>